--- a/p8105_hw1_sa3418.Rmd
+++ b/p8105_hw1_sa3418.Rmd
@@ -24,12 +24,15 @@ prob1_df =
 ```
 
 Take the mean of each variable in my data frame
-```{r}
-pull(prob1_df, samp)
 
+```{r}
+as.numeric(pull(prob1_df, samp))
+as.numeric(pull(prob1_df, samp_gt_0))
+as.numeric(pull(prob1_df, char_vec))
+as.numeric(pull(prob1_df, factor_vec))
 ```
 
-
+I can take the mean of numbers and logical but not character or factor
 ## Problem 2
 
 ```{r}
