--- a/p8105_hw1_sa3418.Rmd
+++ b/p8105_hw1_sa3418.Rmd
@@ -42,14 +42,20 @@ as.numeric(pull(prob1_df, factor_vec))
 ```
 
 ```{r}
-as.numeric(pull(prob1_df, samp)) * pull(prob1_df, samp)
+as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
 
 ## Problem 2
 
 ```{r}
-
+data("penguins", package = "palmerpenguins")
 ```
 
+
+```{r}
+
+```
 
