--- a/p8105_hw1_sa3418.md
+++ b/p8105_hw1_sa3418.md
@@ -9,17 +9,6 @@ This is my solution to HW1
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ---------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --
-
-    ## v ggplot2 3.3.2     v purrr   0.3.4
-    ## v tibble  3.0.1     v dplyr   0.8.5
-    ## v tidyr   1.0.2     v stringr 1.4.0
-    ## v readr   1.3.1     v forcats 0.5.0
-
-    ## -- Conflicts ------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --
-    ## x dplyr::filter() masks stats::filter()
-    ## x dplyr::lag()    masks stats::lag()
-
 ## Problem 1
 
 ``` r
@@ -35,17 +24,49 @@ prob1_df =
 Take the mean of each variable in my data frame
 
 ``` r
+mean(pull(prob1_df, samp))
+```
+
+    ## [1] 0.1314047
+
+``` r
+mean(pull(prob1_df, samp_gt_0))
+```
+
+    ## [1] 0.6
+
+``` r
+mean(pull(prob1_df, char_vec))
+```
+
+    ## Warning in mean.default(pull(prob1_df, char_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(prob1_df, factor_vec))
+```
+
+    ## Warning in mean.default(pull(prob1_df, factor_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+I can take the mean of numbers and logical but not character or factor
+
+``` r
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1] -0.6027550 -0.5316931  0.6619230 -0.8768969 -0.2948049 -0.2077341
-    ##  [7] -0.9963599  1.6041884 -1.0032244 -1.0875902
+    ##  [1]  0.5797285 -0.8409758  1.7994689  0.1823680 -0.7977682 -0.8166111
+    ##  [7]  0.4827826  1.1509255  0.4184400 -0.8443112
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 0 0 1 0 0 0 0 1 0 0
+    ##  [1] 1 0 1 1 0 0 1 1 1 0
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -61,5 +82,67 @@ as.numeric(pull(prob1_df, factor_vec))
 
     ##  [1] 2 2 2 3 3 3 3 1 1 1
 
-I can take the mean of numbers and logical but not character or factor
-\#\# Problem 2
+``` r
+as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+```
+
+    ##  [1] 0.5797285 0.0000000 1.7994689 0.1823680 0.0000000 0.0000000 0.4827826
+    ##  [8] 1.1509255 0.4184400 0.0000000
+
+``` r
+as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
+```
+
+    ## Warning in Ops.factor(as.factor(pull(prob1_df, samp_gt_0)), pull(prob1_df, : '*'
+    ## not meaningful for factors
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
+```
+
+    ##  [1]  1.1594569 -0.8409758  3.5989378  0.3647360 -0.7977682 -0.8166111
+    ##  [7]  0.9655653  2.3018509  0.8368801 -0.8443112
+
+## Problem 2
+
+``` r
+data("penguins", package = "palmerpenguins")
+head(penguins)
+```
+
+    ## # A tibble: 6 x 8
+    ##   species island bill_length_mm bill_depth_mm flipper_length_~ body_mass_g sex  
+    ##   <fct>   <fct>           <dbl>         <dbl>            <int>       <int> <fct>
+    ## 1 Adelie  Torge~           39.1          18.7              181        3750 male 
+    ## 2 Adelie  Torge~           39.5          17.4              186        3800 fema~
+    ## 3 Adelie  Torge~           40.3          18                195        3250 fema~
+    ## 4 Adelie  Torge~           NA            NA                 NA          NA <NA> 
+    ## 5 Adelie  Torge~           36.7          19.3              193        3450 fema~
+    ## 6 Adelie  Torge~           39.3          20.6              190        3650 male 
+    ## # ... with 1 more variable: year <int>
+
+``` r
+names(penguins)
+```
+
+    ## [1] "species"           "island"            "bill_length_mm"   
+    ## [4] "bill_depth_mm"     "flipper_length_mm" "body_mass_g"      
+    ## [7] "sex"               "year"
+
+The dataset has 344 rows and 8 columns.
+
+The mean flipper length in mm is 200.9152047 mm
+
+``` r
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm)) + geom_point(na.rm = TRUE, aes(color = species, shape = species), size = 2.5)
+```
+
+![](p8105_hw1_sa3418_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+
+``` r
+ggsave(filename = 'Scatter_Plot.pdf', plot = last_plot(), dpi = 600)
+```
+
+    ## Saving 7 x 5 in image
