--- a/p8105_hw1_sa3418.md
+++ b/p8105_hw1_sa3418.md
@@ -27,13 +27,13 @@ Take the mean of each variable in my data frame
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.1314047
+    ## [1] -0.3678387
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.6
+    ## [1] 0.2
 
 ``` r
 mean(pull(prob1_df, char_vec))
@@ -59,14 +59,14 @@ I can take the mean of numbers and logical but not character or factor
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1]  0.5797285 -0.8409758  1.7994689  0.1823680 -0.7977682 -0.8166111
-    ##  [7]  0.4827826  1.1509255  0.4184400 -0.8443112
+    ##  [1] -0.1799246  0.1009797 -0.1023992 -0.2507268  0.2995674 -0.4928871
+    ##  [7] -1.0592368 -0.7535992 -0.9750978 -0.2650629
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 1 0 1 1 0 0 1 1 1 0
+    ##  [1] 0 1 0 0 1 0 0 0 0 0
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -86,8 +86,8 @@ as.numeric(pull(prob1_df, factor_vec))
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.5797285 0.0000000 1.7994689 0.1823680 0.0000000 0.0000000 0.4827826
-    ##  [8] 1.1509255 0.4184400 0.0000000
+    ##  [1] 0.0000000 0.1009797 0.0000000 0.0000000 0.2995674 0.0000000 0.0000000
+    ##  [8] 0.0000000 0.0000000 0.0000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -99,11 +99,11 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
     ##  [1] NA NA NA NA NA NA NA NA NA NA
 
 ``` r
-as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
+as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp) 
 ```
 
-    ##  [1]  1.1594569 -0.8409758  3.5989378  0.3647360 -0.7977682 -0.8166111
-    ##  [7]  0.9655653  2.3018509  0.8368801 -0.8443112
+    ##  [1] -0.1799246  0.2019595 -0.1023992 -0.2507268  0.5991347 -0.4928871
+    ##  [7] -1.0592368 -0.7535992 -0.9750978 -0.2650629
 
 ## Problem 2
 
@@ -123,13 +123,12 @@ head(penguins)
     ## 6 Adelie  Torge~           39.3          20.6              190        3650 male 
     ## # ... with 1 more variable: year <int>
 
-``` r
-names(penguins)
-```
-
-    ## [1] "species"           "island"            "bill_length_mm"   
-    ## [4] "bill_depth_mm"     "flipper_length_mm" "body_mass_g"      
-    ## [7] "sex"               "year"
+The dataset has column names that are \[species, island,
+bill\_length\_mm, bill\_depth\_mm, flipper\_length\_mm, body\_mass\_g,
+sex, year\]. The dataset represents the different species of penguins
+and their physical attributes (bill length in mm, bill depth in mm,
+flipper length in mm, body mass index, sex) and the islands they are
+found on. The dataset has 3 species of penguins found on 3 islands.
 
 The dataset has 344 rows and 8 columns.
 
@@ -139,7 +138,7 @@ The mean flipper length in mm is 200.9152047 mm
 ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm)) + geom_point(na.rm = TRUE, aes(color = species, shape = species), size = 2.5)
 ```
 
-![](p8105_hw1_sa3418_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+![](p8105_hw1_sa3418_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 
 ``` r
 ggsave(filename = 'Scatter_Plot.pdf', plot = last_plot(), dpi = 600)
