--- a/p8105_hw1_sa3418.md
+++ b/p8105_hw1_sa3418.md
@@ -21,19 +21,19 @@ prob1_df =
   )
 ```
 
-Take the mean of each variable in my data frame
+### Taking the mean of each variable in the data frame
 
 ``` r
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] -0.3678387
+    ## [1] 0.2653498
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.2
+    ## [1] 0.7
 
 ``` r
 mean(pull(prob1_df, char_vec))
@@ -53,20 +53,23 @@ mean(pull(prob1_df, factor_vec))
 
     ## [1] NA
 
-I can take the mean of numbers and logical but not character or factor
+The means of numbers and logical are valid but not for characters or
+factors
+
+### Type conversion
 
 ``` r
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1] -0.1799246  0.1009797 -0.1023992 -0.2507268  0.2995674 -0.4928871
-    ##  [7] -1.0592368 -0.7535992 -0.9750978 -0.2650629
+    ##  [1]  0.50183026  0.30092860 -0.83770346 -0.03656976  0.13514498  0.81611234
+    ##  [7]  0.13913409  0.35938155 -1.03397930  2.30921862
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 0 1 0 0 1 0 0 0 0 0
+    ##  [1] 1 1 0 0 1 1 1 1 0 1
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -82,12 +85,19 @@ as.numeric(pull(prob1_df, factor_vec))
 
     ##  [1] 2 2 2 3 3 3 3 1 1 1
 
+It is possible to convert numbers and logical values to their numeric
+equivalents. The factor variable is converted into the numberical
+equivalent of the 3 grades. Trying to convert the character vector
+throws an error.
+
+### Type conversion and multiplying with the random sample
+
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.0000000 0.1009797 0.0000000 0.0000000 0.2995674 0.0000000 0.0000000
-    ##  [8] 0.0000000 0.0000000 0.0000000
+    ##  [1] 0.5018303 0.3009286 0.0000000 0.0000000 0.1351450 0.8161123 0.1391341
+    ##  [8] 0.3593815 0.0000000 2.3092186
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -102,8 +112,13 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp) 
 ```
 
-    ##  [1] -0.1799246  0.2019595 -0.1023992 -0.2507268  0.5991347 -0.4928871
-    ##  [7] -1.0592368 -0.7535992 -0.9750978 -0.2650629
+    ##  [1]  1.00366053  0.60185719 -0.83770346 -0.03656976  0.27028995  1.63222468
+    ##  [7]  0.27826817  0.71876310 -1.03397930  4.61843724
+
+Converting the logical vector to a numeric made it possible to multiply
+it with the random sample. Converting it to a factor, however resulted
+in an error when multiplying with the random sample. Converting the
+factor to a numeric allowed the arithmetic operation.
 
 ## Problem 2
 
